--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 Hello World
+body {
+  margin: 0 auto;
+  maxwidth:50em;
+}
+body {
+  font-family: "helvetica", "Arial", sans-serif;
+}
+body {
+  line-height: 1.5;
+  padding: 4em lem;
+}
