--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@ body {
   maxwidth:50em;
 }
 body {
-  font-family: "helvetica", "Arial", sans-serif;
+  font-family: "Helvetica", "Arial", sans-serif;
 }
 body {
   line-height: 1.5;
   padding: 4em lem;
+}
+body {
+  color: #555;
+}
+h1,
+h2,
+strong {
+  color: #333;
+}
+code,
+pre {
+  background: #eee;
+}
+code {
+  padding: 2px 4px;
+  vertical-align: text-bottom;
+}
+pre {
+  padding: lem;
 }
