--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 Hello World
+
+<head>
+  <style>
 body {
   margin: 0 auto;
   maxwidth:50em;
@@ -29,3 +32,5 @@ code {
 pre {
   padding: lem;
 }
+</style>
+<head>
