--- a/index.html
+++ b/index.html
@@ -32,5 +32,34 @@ code {
 pre {
   padding: lem;
 }
+a {
+  color: #e81c4f;
+}
+body {
+  color: #566b78;
+}
+code,
+pre {
+  background: #f5f7f9;
+  border-bottom: 1px solid #d8dee9;
+  color: #a7adba;
+}
+pre {
+  border-left: 2px solid #69c;
+}
+@import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500';
+body {
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+}
+header {
+  background-color: #263d36;
+  background-image: url("header.jpg");
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  line-height: 1.2;
+  padding: 10vw 2em;
+  text-align: center;
+}
 </style>
 <head>
