--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 Hello World!
-I'm Caitlin Cobb, and this is my website!
+I'm Caitlin Cobb, and this is my website!  I am a student at St. Andrew's School in Middletown, DE.  I have some projects at:
 
 <head>
   <style>
