--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body {
 }
 header {
   background-color: #263d36;
-  background-image: url("https://unsplash.com/photos/qH36EgNjPJY");
+  background-image: url("");
   background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
