--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body {
 }
 header {
   background-color: #263d36;
-  background-image: url("");
+  background-image: url("landscape.jpeg");
   background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
