--- a/index.html
+++ b/index.html
@@ -1,66 +1,15 @@
-Hello World!
-I'm Caitlin Cobb, and this is my website!  I am a student at St. Andrew's School in Middletown, DE.  I have some projects at:
+<html>
+<head>
+<title>C.Cobb</title>
+</head>
 
-<head>
-  <style>
-body {
-  margin: 0 auto;
-  maxwidth:50em;
-}
-body {
-  font-family: "Helvetica", "Arial", sans-serif;
-}
-body {
-  line-height: 1.5;
-  padding: 4em lem;
-}
-body {
-  color: #555;
-}
-h1,
-h2,
-strong {
-  color: #333;
-}
-code,
-pre {
-  background: #eee;
-}
-code {
-  padding: 2px 4px;
-  vertical-align: text-bottom;
-}
-pre {
-  padding: lem;
-}
-a {
-  color: #e81c4f;
-}
-body {
-  color: #566b78;
-}
-code,
-pre {
-  background: #f5f7f9;
-  border-bottom: 1px solid #d8dee9;
-  color: #a7adba;
-}
-pre {
-  border-left: 2px solid #69c;
-}
-@import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500';
-body {
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-}
-header {
-  background-color: #263d36;
-  background-image: url("landscape.jpeg");
-  background-position: center top;
-  background-repeat: no-repeat;
-  background-size: cover;
-  line-height: 1.2;
-  padding: 10vw 2em;
-  text-align: center;
-}
-</style>
-<head>
+<body bgcolor=#4A96AD>
+  <h1 align=center>Hello World!</h1>
+  <p align=center>I'm Caitlin Cobb, and this is my website!  I am a student at St. Andrew's School in Middletown, DE.</h>
+  <p align=center> I have some projects <a href=ccobb5404.github.com> here</a>. </p>
+    Here is something <a href=http://mentalfloss.com/article/66591/15-things-you-might-not-know-about-great-wave-kanagawa>interesting </a>.</p>
+<p align=center><img src=1280px-Great_Wave_off_Kanagawa2.jpg></p>
+
+</body>
+
+<html>
