--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <h1 align=center>Hello World!</h1>
   <p align=center>I'm Caitlin Cobb, and this is my website!  I am a student at St. Andrew's School in Middletown, DE.</h>
   <p align=center> I have some projects <a href=ccobb5404.github.com> here</a>. </p>
-    Here is something <a href=http://mentalfloss.com/article/66591/15-things-you-might-not-know-about-great-wave-kanagawa>interesting </a>.</p>
+  <p align=center> Here is something <a href=http://mentalfloss.com/article/66591/15-things-you-might-not-know-about-great-wave-kanagawa>interesting </a>.</p>
 <p align=center><img src=1280px-Great_Wave_off_Kanagawa2.jpg></p>
 
 </body>
