--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <head>
 <title>C.Cobb</title>
 </head>
-
+<style>
+@import 'https://fonts.googleapis.com/css?family=Architects+Daughter';
+</style>
 <body bgcolor=#4A96AD>
+  <font-family> "Architects Daughter"</font-family>
   <h1 align=center>Hello World!</h1>
   <p align=center>I'm Caitlin Cobb, and this is my website!  I am a student at St. Andrew's School in Middletown, DE.</h>
   <p align=center> I have some projects <a href=ccobb5404.github.com> here</a>. </p>
