--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 @import 'https://fonts.googleapis.com/css?family=Architects+Daughter';
 </style>
 <body bgcolor=#4A96AD>
-  <font-family> "Architects Daughter"</font-family>
+  <font> font-family: 'Architects Daughter', cursive;</font>
   <h1 align=center>Hello World!</h1>
   <p align=center>I'm Caitlin Cobb, and this is my website!  I am a student at St. Andrew's School in Middletown, DE.</h>
   <p align=center> I have some projects <a href=ccobb5404.github.com> here</a>. </p>
