--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 </head>
 
 <body bgcolor=#4A96AD>
-
+<text = FFFFFF>
+<link = D2D2D2>
   <h1 align=center>Hello World!</h1>
   <p align=center>I'm Caitlin Cobb, and this is my website!  I am a student at St. Andrew's School in Middletown, DE.</h>
   <p align=center> I have some projects <a href=https://github.com/ccobb5404/ccobb5404.github.io> here</a>. </p>
   <p align=center> Here is something <a href=http://mentalfloss.com/article/66591/15-things-you-might-not-know-about-great-wave-kanagawa>interesting </a>.</p>
   <p align=center> Here is somethign about <a href=https://www.sciencedaily.com/news/computers_math/computer_science/> computer science </a>.</p>
-<p align=center><img src=1280px-Great_Wave_off_Kanagawa2.jpg></p>
-
+<body background="1280px-Great_Wave_off_Kanagawa2.jpg">
 </body>
 
 <html>
